fix: urls and gradient changes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>MindPrick</title>
-</head>
-<body>
-    <h1>Welcome to Mindprick !</h1>
-    <p>Step back and relax. We are working on it.</p>
-</body>
+    <style>
+      html,
+      body,
+      .container {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        font-family: 'Ubuntu';
+        background-image: linear-gradient(to right bottom, #888, #222);
+        color: white;
+      }
+      .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="content">
+        <h1>Welcome to Mindprick !</h1>
+        <p>Step back and relax. We are working on it.</p>
+      </div>
+    </div>
+  </body>
 </html>
